--- a/templates/dashboard/pages/addTripMin.html
+++ b/templates/dashboard/pages/addTripMin.html
@@ -6,6 +6,71 @@
     </div>
 </div> 
 {{{{raw-helper}}}}
+<script id="addTripMin" type="text/x-handlebars-template">
+ <div class="container-fluid">
+      <div class="row">
+     <!--  <div class="col-md-5  toppad  pull-right col-md-offset-3 ">
+           <A href="edit.html" >Edit Profile |</A>
+          <A href="edit.html" >Logout</A>
+       <br>
+        <p class=" text-info">May 05,2014,03:00 pm </p>
+      </div> -->
+       {{#with data}}
+        <div class="col-sm-12" >
+              <div class="row">
+                <!-- <div class="col-sm-3" align="center"> <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div> -->
+                <div class="col-sm-9 col-sm-9 "> 
+                    {{pickup.date}}
+                 <!--  <table class="table table-user-information">
+                    <tbody>
+                      <tr>
+                        <td>Name:</td>
+                        <td>{{firstName}} {{lastName}}</td>
+                      </tr>
+                         <tr>
+                        <tr>
+                        <td>Gender:</td>
+                        <td>{{gender}}</td>
+                         </tr>
+                         <tr>
+                        <td>UserType:</td>
+                        <td>{{profile.userType}}</td>
+                         </tr>
+                        <tr>
+                        <td>Organisation Address:</td>
+                        <td>
+                            {{#if organisationAddress}}
+                                    {{#if organisationAddress.organisation}}
+                                        {{organisationAddress.organisation}}
+                                    {{/if}}
+                                    {{#if organisationAddress.address}}
+                                        {{organisationAddress.address}}
+                                    {{/if}}
+                                    {{#if organisationAddress.location}}
+                                        {{organisationAddress.location}}
+                                    {{/if}}
+                            {{/if}}
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>Email:</td>
+                        <td><a href="">{{email}}</a></td>
+                      </tr>
+                        <td>mobile:</td>
+                        <td>{{mobile}}
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table> -->
+                </div>
+              </div>
+        </div>
+            {{/with}}
+      </div>
+    </div>
+</script>
+{{{{/raw-helper}}}}
+{{{{raw-helper}}}}
 <script type="text/javascript">
     function setItemsToDrop(){var e=!1,t=this.getValue().toUpperCase();if($(".itemsToDropGroup select option").each(function(i,o){o.text.toUpperCase()===t&&(e=!0)}),!e){var i="";$(".materialNameGroup input").each(function(){$(this).val()&&(i+='<option value="'+$(this).val().toUpperCase()+'">'+$(this).val().toUpperCase()+"</option>")}),$(".itemsToDropGroup select").each(function(){var e=$(this).val();$(this).html(i),$(this).multiselect("rebuild"),e&&e.length>0&&$(this).multiselect("select",e),$(this).val()&&0!==$(this).val().length||$(this).multiselect("select",[t])})}}function initializeItemsToDropInEditMode(e){if(e.data&&e.data.pickup&&e.data.pickup.length>0){var t=[];if(e.data.pickup.forEach(function(e){e.material&&e.material.length>0&&e.material.forEach(function(e){e.name&&t.indexOf(e.name)<0&&t.push(e.name.toUpperCase())})}),t.length>0){var i="";t.forEach(function(e){i+='<option value="'+e+'">'+e+"</option>"}),$(".itemsToDropGroup select").each(function(t,o){$(o).val();$(o).html(i),$(o).multiselect("rebuild"),e.data.drop&&e.data.drop.length>t&&e.data.drop[t].itemsToDrop&&$(o).multiselect("select",e.data.drop[t].itemsToDrop)})}}}console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();FORM_HELPER.draw(".new-trips-content",e,{bindings:{pickup:"column-1",drop:"column-2",vehicleRequirements:"column-2"},schemaOverride:{fields:{pickup:{title:"Pickup point"},drop:{title:"Drop point"},vehicleRequirements:{properties:{vehicleCount:{"default":1,minimum:1}}}}},optionsOverride:{focus:"pickup/date",fields:{pickup:{order:1,items:{fields:{material:{items:{fields:{name:{fieldClass:"materialNameGroup",events:{blur:function(){setItemsToDrop.apply(this,[])}}}}}}}}},drop:{order:2},vehicleRequirements:{order:3}}},callbacks:{preRender:function(e){},beforeSubmit:function(){},afterSubmit:function(){MENU_HELPER.menuClick("manageTrip","manageTrip")},onSubmitError:function(){},postRender:function(){initializeItemsToDropInEditMode(e)}},postUrl:"trips/service/addTripMin"})});
 </script>
